--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -4,8 +4,8 @@ $medium-breakpoint: 42em !default;
 
 // Headers
 $header-heading-color: #fff !default;
-$header-bg-color: #ffcc00 !default;
-$header-bg-color-secondary: #cc99ff !default;
+$header-bg-color: #0066ff !default;
+$header-bg-color-secondary: #00ff66 !default;
 
 // Text
 $section-headings-color: #159957 !default;
